--- a/Blog_post_Gaussian-random-variables.ipynb
+++ b/Blog_post_Gaussian-random-variables.ipynb
@@ -627,7 +627,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "agentic-env",
+   "display_name": "blog-env",
    "language": "python",
    "name": "python3"
   },
